feat(No.2, No.3): add function 2, 3 (except age filter)
데이터 필터 기능 (다중 column 필터 안 됨)
필터 시에 modal처럼 창 뜨게 함
목록에서 환자 클릭 시 상세 정보 보여주기

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -7,11 +7,14 @@
 
     & .Column {
       font-weight: bold;
-      
-      & > .OrderColumnButton {
-        margin-left: 0.2em;
-        padding: 0.2em;
-        cursor: pointer;
+
+      & > .FilterButton {
+        background-color: inherit;
+        border: 0px;
+
+        &:hover {
+          color: #567ace;
+        }
       }
     }
 
