--- a/src/shared/ModalBackground/ModalBackground.scss
+++ b/src/shared/ModalBackground/ModalBackground.scss
@@ -1,7 +1,7 @@
 .ModalBackground {
   left: 0;
   top: 0;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   width: 100%;
   height: 100%;
